<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:background="@color/background">

    <ImageView
        android:id="@+id/im1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:background="@drawable/splash"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/mail"
        android:layout_marginTop="181dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:drawablePadding="10dp"
        android:hint="@string/email"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:layout_below="@+id/mail"
        android:layout_centerHorizontal="true"
        android:drawablePadding="10dp"
        android:hint="@string/password"/>


    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="Giriş"
        android:id="@+id/login"
        android:drawablePadding="10dp"
        android:textColor="@color/background"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnRegisterScreen"
        android:background="@null"
        android:textSize="15dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/login"
        android:hint="@string/account"
        android:textColorHint="@color/whitee"/>




</RelativeLayout>